objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PreRelease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order_in_Portal__c</fullName>
        <label>Sort Order in Portal</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release_Type__c</columns>
        <columns>Show_in_Portal__c</columns>
        <columns>Sort_Order_in_Portal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>